# zendesk-support-pipeline

./: .env.example  CLAUDE.md  Dockerfile  pyproject.toml
.github/workflows/: ci.yml
config/: connector.yaml
infra/terraform/: dynamodb.tf  ecs.tf  eventbridge.tf  iam.tf  main.tf  s3.tf  variables.tf
src/zendesk_ingestion/: cli.py  exceptions.py  metrics.py  orchestrator.py
src/zendesk_ingestion/api/: client.py  pagination.py  rate_limiter.py
src/zendesk_ingestion/config/: loader.py  models.py
src/zendesk_ingestion/state/: dynamodb.py
src/zendesk_ingestion/streams/: __init__.py  automations.py  base.py  brands.py  groups.py  macros.py  organizations.py  registry.py  satisfaction_ratings.py  schedules.py  sla_policies.py  tags.py  ticket_audits.py  ticket_fields.py  ticket_forms.py  ticket_metrics.py  tickets.py  triggers.py  users.py  views.py
src/zendesk_ingestion/sync_modes/: __init__.py  base.py  full_refresh_append.py  full_refresh_overwrite.py  incremental_append.py  incremental_deduped.py
src/zendesk_ingestion/transform/: fivetran.py
src/zendesk_ingestion/writers/: s3.py
tasks/: phase-1-foundation.md  phase-2-streams.md  phase-3-orchestration.md  phase-4-tests.md
tests/: conftest.py
tests/fixtures/zendesk/: tickets.json
tests/unit/: test_cli.py  test_metrics.py  test_orchestrator.py
tests/unit/api/: test_client.py  test_rate_limiter.py
tests/unit/config/: test_loader.py
tests/unit/state/: test_dynamodb.py
tests/unit/streams/: test_registry.py  test_tickets.py
tests/unit/sync_modes/: test_full_refresh_append.py  (+3 more)
(+2 files in other folders)
